--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "formik": "^2.0.4",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
