--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,7 @@
-{}
+{
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#103425",
+        "titleBar.activeBackground": "#164933",
+        "titleBar.activeForeground": "#F5FCF9"
+    }
+}
