--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "d3": "^5.5.0",
     "formik": "^2.0.4",
     "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-d3-graph": "^2.3.0",
     "react-dom": "^16.12.0",
-    "react-graph-vis": "^1.0.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.1",
