--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3": "^5.5.0",
     "formik": "^2.0.4",
     "history": "^4.10.1",
+    "nes.css": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-d3-graph": "^2.3.0",
